move pages from dist to root

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="dist/css/main.css" />
     <title>About me</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
 </head>
@@ -41,7 +41,7 @@
         <h1 class="lg-heading">About <span class="text-secondary">Me</span></h1>
         <h2 class="sm-heading">Let me tell you a few things...</h2>
         <div class="about-info">
-            <img src="img/pretobranco.jpg " alt="Barbara Garbulha " class="bio-image" />
+            <img src="dist/img/pretobranco.jpg " alt="Barbara Garbulha " class="bio-image" />
             <div class="bio">
                 <h3 class="text-secondary">BIO</h3>
                 <p>
@@ -73,7 +73,7 @@
         </div>
     </main>
     <footer id="main-footer">Copyright &copy; 2021</footer>
-    <script src="js/main.js "></script>
+    <script src="dist/js/main.js "></script>
 </body>
 
 </html>
