--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="dist/css/main.css" />
     <title>Welcome to My Portfolio</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
 </head>
@@ -59,7 +59,7 @@
             </a>
         </div>
     </main>
-    <script src="js/main.js"></script>
+    <script src="dist/js/main.js"></script>
 </body>
 
 </html>
