--- a/work.html
+++ b/work.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="dist/css/main.css" />
     <title>View My Work</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
 </head>
@@ -43,7 +43,7 @@
         <div class="projects">
             <div class="item">
                 <a href="#!">
-                    <img src="img/projects/project1.png" alt="Project" />
+                    <img src="dist/img/projects/project1.png" alt="Project" />
                 </a>
                 <a href="#" class="btn-light"> <i class="fas fa-eye"></i> Project </a>
                 <a href="#" class="btn-dark">
@@ -52,7 +52,7 @@
             </div>
             <div class="item">
                 <a href="#!">
-                    <img src="img/projects/project2.png" alt="Project" />
+                    <img src="dist/img/projects/project2.png" alt="Project" />
                 </a>
                 <a href="#" class="btn-light"> <i class="fas fa-eye"></i> Project </a>
                 <a href="#" class="btn-dark">
@@ -61,7 +61,7 @@
             </div>
             <div class="item">
                 <a href="#!">
-                    <img src="img/projects/project3.png" alt="Project" />
+                    <img src="dist/img/projects/project3.png" alt="Project" />
                 </a>
                 <a href="#" class="btn-light"> <i class="fas fa-eye"></i> Project </a>
                 <a href="#" class="btn-dark">
@@ -70,7 +70,7 @@
             </div>
             <div class="item">
                 <a href="#!">
-                    <img src="img/projects/project4.png" alt="Project" />
+                    <img src="dist/img/projects/project4.png" alt="Project" />
                 </a>
                 <a href="#" class="btn-light"> <i class="fas fa-eye"></i> Project </a>
                 <a href="#" class="btn-dark">
@@ -79,7 +79,7 @@
             </div>
             <div class="item">
                 <a href="#!">
-                    <img src="img/projects/project5.png" alt="Project" />
+                    <img src="dist/img/projects/project5.png" alt="Project" />
                 </a>
                 <a href="#" class="btn-light"> <i class="fas fa-eye"></i> Project </a>
                 <a href="#" class="btn-dark">
@@ -89,7 +89,7 @@
         </div>
     </main>
     <footer id="main-footer">Copyright &copy; 2021</footer>
-    <script src="js/main.js "></script>
+    <script src="dist/js/main.js "></script>
 </body>
 
 </html>
