--- a/contact.html
+++ b/contact.html
@@ -42,14 +42,16 @@
         <h2 class="sm-heading">This is how you can reach me...</h2>
         <div class="boxes">
             <div>
-                <span class="text-secondary">Email:</span> barbara.garbuha@gmail.com
+                <span class="text-secondary">Email:</span>
+                <p>barbara.garbuha@gmail.com</p>
             </div>
             <div>
                 <span class="text-secondary">Phone:</span>
-                <a href="tel:+14377781186"> 437 778 1186</a>
+                <p><a href="tel:+14377781186">437 778 1186</a></p>
             </div>
             <div>
-                <span class="text-secondary">Address:</span> 436 Paliser Crescent , Richmond Hill, L4C 1R6
+                <span class="text-secondary">Address:</span>
+                <p>436 Paliser Crescent , Richmond Hill, L4C 1R6</p>
             </div>
         </div>
     </main>
