fix css responsivenes and some bugs

--- a/about.html
+++ b/about.html
@@ -45,29 +45,29 @@
             <div class="bio">
                 <h3 class="text-secondary">BIO</h3>
                 <p>
-                    Responsible and goal-oriented Web Developer. Bilingual, strong interpersonal and organizational skills, with extensive experience in Microsoft Office.
+                    Front-End Developer. HTML, CSS, JavaScript, React and Node skills.
                 </p>
             </div>
 
             <div class="job job-1">
-                <h3>Easy Plastic Containers corporate</h3>
+                <h3>Easy Plastic Containers Corporate</h3>
                 <h6>Office Assistant</h6>
                 <p>
                     Oversaw the entire supply chain, from ordering and warehousing to shipping the final products to the customers. Processed requests, managed inventory, issued invoices and maintained database.
                 </p>
             </div>
             <div class="job job-2">
-                <h3>Just Thrift</h3>
-                <h6>Sales Associate</h6>
+                <h3>Job 2</h3>
+                <h6>Job Position 2</h6>
                 <p>
-                    Assisted customers throughout the buying process, such as greeting customers when they enter the store, helping customers find specific products or showing them how to use them and ringing up customer purchases on the POS register.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem tenetur, non iste, provident tempora perferendis totam neque suscipit accusamus sit blanditiis quae voluptates odio quaerat similique rem officia pariatur placeat.
                 </p>
             </div>
             <div class="job job-3">
-                <h3>Gardan Engenharia</h3>
-                <h6>Environmental engineer</h6>
+                <h3>Job 3</h3>
+                <h6>Job Position 3</h6>
                 <p>
-                    Helped maintain clean and healthy surroundings through the protection of air, soil, and water quality.Designed safe solid waste transfer and disposal sites, water distribution and treatment systems, and wastewater collection and treatment systems.
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo esse debitis quod suscipit ea doloremque quisquam doloribus nemo, expedita similique. Neque at adipisci, blanditiis quidem eum ipsa reiciendis ratione voluptas.
                 </p>
             </div>
         </div>
