--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <h1 class="lg-heading">
             Barbara <span class="text-secondary">Garbulha</span>
         </h1>
-        <h2 class="sm-heading">Web Delevoper, Programmer & Designer</h2>
+        <h2 class="sm-heading">Front-End Developer</h2>
         <div class="icons">
             <a href="#!">
                 <i class="fab fa-twitter fa-2x"></i>
